--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,9 @@ sonar.projectKey=Teester_entityshape
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
+sonar.python.version=3
 sonar.sources=.
+sonar.dynamicAnalysis=reuseReports
+sonar.core.codeCoveragePlugin=cobertura
+sonar.python.coverage.reportPaths=*coverage*.xml
+sonar.python.xunit.reportPath=xunit-result*.xml
