--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask~=2.0.2
-flask_cors
-requests~=2.26.0
-PyShExC~=0.8.3
-
+flask~=2.1.2
+flask_cors~=3.0.10
+requests==2.28.0
+PyShExC~=0.9.1
+chardet~=5.0.0
 jsonasobj~=1.3.1
