--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,9 +37,10 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with unittest
       run: |
-        python -m coverage run --omit=*/site-packages/* -m unittest discover
-        coverage xml
-        coverage report
+        python -m unittest discover
+        #coverage run --omit=*/site-packages/* -m unittest discover
+        #coverage xml
+        #coverage report
     - uses: actions/upload-artifact@v2
       with:
         name: code-coverage
