--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,10 +40,9 @@ jobs:
         echo "PYTHONPATH=home/runner/work/entityshape" >> $GITHUB_ENV
     - name: Test with unittest
       run: |
-        python -m unittest discover -s ./tests
-        #coverage run --omit=*/site-packages/* -m unittest discover
-        #coverage xml
-        #coverage report
+        coverage run --omit=*/site-packages/* -m unittest discover
+        coverage xml
+        coverage report
     - uses: actions/upload-artifact@v2
       with:
         name: code-coverage
