--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask~=2.1.2
-flask_cors~=3.0.10
-requests==2.28.0
+flask~=3.0.0
+flask_cors~=4.0.0
+requests==2.31.0
 PyShExC~=0.9.1
-chardet~=5.0.0
+chardet~=5.2.0
 jsonasobj~=1.3.1
+setuptools~=69.0.2
