--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-flask~=3.0.3
-flask_cors~=4.0.1
+flask~=3.1.0
+flask_cors~=5.0.1
 requests==2.32.3
 PyShExC~=0.9.1
 chardet~=5.2.0
 jsonasobj~=1.3.1
-setuptools~=71.1.0
+setuptools~=78.1.0
+antlr4-python3-runtime==4.9.3
