--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -54,3 +54,8 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         slug: Teester/entityshape
+    - name: Upload test results to Codecov
+      if: ${{ !cancelled() }}
+      uses: codecov/test-results-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
